k8s/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live
  namespace: live
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live
  template:
    metadata:
      labels:
        app: live
