k8s/overlays/prod/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: live
  namespace: live
spec:
  selector:
    app: live
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live
  namespace: live
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - mahd.live
        - meet.mahd.live
        - www.mahd.live
      secretName: mahd-live-tls
    - hosts:
        - meet.mahd.group
      secretName: meet-mahd-group-tls
    - hosts:
        - meet.mahd.dev
      secretName: meet-mahd-dev-tls
    - hosts:
        - meet.mahd.cloud
      secretName: meet-mahd-cloud-tls
  rules:
    - host: mahd.live
      http: &live
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: live
                port:
                  name: http
    - host: meet.mahd.live
      http: *live
    - host: www.mahd.live
      http: *live
    - host: meet.mahd.group
      http: *live
    - host: meet.mahd.dev
      http: *live
    - host: meet.mahd.cloud
      http: *live
